name:                envstatus
version:             0.1.0.0
synopsis:            Display efficiently the state of the local environment
description:         Meant to gather in a fast manner all the information you want from your local
                     environment (like git status, python venv, terrform workspace, ...).
                     Can be displayed in a prompt compatible format
license:             MIT
license-file:        LICENSE
author:              Grégory Bataille
maintainer:          gregory.bataille@gmail.com
-- copyright:
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable envstatus
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  other-modules:       EnvStatus.Config
                     , EnvStatus.Output.Parse
                     , EnvStatus.Output.Render
                     , EnvStatus.Output.Types
  -- other-extensions:
  build-depends:       base >=4.11 && <4.12
                     , ConfigFile >= 1.1 && <1.2
                     , mtl >= 2.2 && <2.3
                     , parsec >= 3.1 && < 3.2
                     , unix >= 2.7 && < 2.8
  hs-source-dirs:      src
  default-language:    Haskell2010
